add cmake environment variables

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -264,7 +264,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        qt_arch: [mingw64_qt5-gcc, mingw64_qt5-static-gcc, mingw64_qt5-clang, mingw64_qt6-gcc, mingw64_qt6-clang]
+        qt_arch: [mingw64_qt5-gcc, mingw64_qt5-static-gcc, mingw64_qt5-clang, mingw64_qt5-static-clang, mingw64_qt6-gcc, mingw64_qt6-clang, mingw64_qt6-static-gcc, mingw64_qt6-static-clang]
         include:
           - qt_arch: mingw64_qt5-gcc
             mingw_arch: MINGW64 
@@ -272,60 +272,72 @@ jobs:
             toolchains: gcc
             c: gcc
             cxx: g++
-            mkspec: win32-g++
             qt_build: qt5
-            qmake: qmake.exe
-            windeployqt: windeployqt.exe
+            qt_dir: /mingw64/lib/cmake/Qt5
+            cmake_prefix_path: /mingw64
           - qt_arch: mingw64_qt5-static-gcc
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
             toolchains: gcc
             c: gcc
             cxx: g++
-            mkspec: win32-g++
             qt_build: qt5-static
-            qmake: /mingw64/qt5-static/bin/qmake.exe
-            windeployqt: ls.exe
+            qt_dir: /mingw64/qt5-static/lib/cmake/Qt5
+            cmake_prefix_path: /mingw64/qt5-static
           - qt_arch: mingw64_qt5-clang
             mingw_arch: CLANG64 
             mingw_prefix: mingw-w64-clang-x86_64
             toolchains: clang
             c: clang
             cxx: clang++
-            mkspec: win32-clang-g++
             qt_build: qt5
-            qmake: qmake.exe
-            windeployqt: windeployqt.exe
+            qt_dir: /clang64/lib/cmake/Qt5
+            cmake_prefix_path: /clang64
           - qt_arch: mingw64_qt5-static-clang
             mingw_arch: CLANG64 
             mingw_prefix: mingw-w64-clang-x86_64
             toolchains: clang
             c: clang
             cxx: clang++
-            mkspec: win32-clang-g++
             qt_build: qt5-static
-            qmake: /clang64/qt5-static/bin/qmake.exe
-            windeployqt: ls.exe
+            qt_dir: /clang64/qt5-static/lib/cmake/Qt5
+            cmake_prefix_path: /clang64/qt5-static
           - qt_arch: mingw64_qt6-gcc
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
             toolchains: gcc
             c: gcc
             cxx: g++
-            mkspec: win32-g++
             qt_build: qt6
-            qmake: qmake6.exe
-            windeployqt: windeployqt.exe
+            qt_dir: /mingw64/lib/cmake/Qt6
+            cmake_prefix_path: /mingw64
           - qt_arch: mingw64_qt6-clang
             mingw_arch: CLANG64 
             mingw_prefix: mingw-w64-clang-x86_64
             toolchains: clang
             c: clang
             cxx: clang++
-            mkspec: win32-clang-g++
             qt_build: qt6
-            qmake: qmake6.exe
-            windeployqt: windeployqt.exe
+            qt_dir: /clang64/lib/cmake/Qt6
+            cmake_prefix_path: /clang64
+          - qt_arch: mingw64_qt6-static-gcc
+            mingw_arch: MINGW64 
+            mingw_prefix: mingw-w64-x86_64
+            toolchains: gcc
+            c: gcc
+            cxx: g++
+            qt_build: qt6
+            qt_dir: /mingw64/qt6-static/lib/cmake/Qt6
+            cmake_prefix_path: /mingw64/qt6-static
+          - qt_arch: mingw64_qt6-static-clang
+            mingw_arch: CLANG64 
+            mingw_prefix: mingw-w64-clang-x86_64
+            toolchains: clang
+            c: clang
+            cxx: clang++
+            qt_build: qt6
+            qt_dir: /clang64/qt6-static/lib/cmake/Qt6
+            cmake_prefix_path: /clang64/qt6-static
     env:
       targetName: CodeInspector
       
@@ -389,7 +401,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DQT_DIR=${{ matrix.qt_dir }} -DCMAKE_PREFIX_PATH=${{ matrix.cmake_prefix_path }} -G Ninja ..
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin ninja
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin mingwdeployqt.exe ${env:targetName}'.exe'
           ls -l
