--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -264,44 +264,8 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        qt_arch: [mingw64_qt5-gcc, mingw64_qt5-static-gcc, mingw64_qt5-clang, mingw64_qt5-static-clang, mingw64_qt6-gcc, mingw64_qt6-clang, mingw64_qt6-static-gcc, mingw64_qt6-static-clang]
+        qt_arch: [mingw64_qt6-gcc, mingw64_qt6-clang, mingw64_qt6-static-gcc, mingw64_qt6-static-clang]
         include:
-          - qt_arch: mingw64_qt5-gcc
-            mingw_arch: MINGW64 
-            mingw_prefix: mingw-w64-x86_64
-            toolchains: gcc
-            c: gcc
-            cxx: g++
-            qt_build: qt5
-            qt_dir: /mingw64/lib/cmake/Qt5
-            cmake_prefix_path: /mingw64
-          - qt_arch: mingw64_qt5-static-gcc
-            mingw_arch: MINGW64 
-            mingw_prefix: mingw-w64-x86_64
-            toolchains: gcc
-            c: gcc
-            cxx: g++
-            qt_build: qt5-static
-            qt_dir: /mingw64/qt5-static/lib/cmake/Qt5
-            cmake_prefix_path: /mingw64/qt5-static
-          - qt_arch: mingw64_qt5-clang
-            mingw_arch: CLANG64 
-            mingw_prefix: mingw-w64-clang-x86_64
-            toolchains: clang
-            c: clang
-            cxx: clang++
-            qt_build: qt5
-            qt_dir: /clang64/lib/cmake/Qt5
-            cmake_prefix_path: /clang64
-          - qt_arch: mingw64_qt5-static-clang
-            mingw_arch: CLANG64 
-            mingw_prefix: mingw-w64-clang-x86_64
-            toolchains: clang
-            c: clang
-            cxx: clang++
-            qt_build: qt5-static
-            qt_dir: /clang64/qt5-static/lib/cmake/Qt5
-            cmake_prefix_path: /clang64/qt5-static
           - qt_arch: mingw64_qt6-gcc
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
