--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -367,18 +367,7 @@ jobs:
           cd build
           env PATH=/${{ matrix.mingw_arch }}/bin:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DQT_DIR=${{ matrix.qt_dir }} -DCMAKE_PREFIX_PATH=${{ matrix.cmake_prefix_path }} -G Ninja ..
           env PATH=/${{ matrix.mingw_arch }}/bin ninja
-          env PATH=/${{ matrix.mingw_arch }}/bin mingwdeployqt.exe ${env:targetName}'.exe'
-          ls -l
-          ls -l desktop-qt
-          cd ..
-
-      - name: extract executable
-        env:
-          archiveName: ${{ env.targetName }}-${{ matrix.toolchains }}
-        shell: pwsh
-        run: |
-          New-Item -ItemType Directory ${env:archiveName}
-          Copy-Item build\desktop-qt\release\${env:targetName}'.exe' ${env:archiveName}\
+          env PATH=/${{ matrix.mingw_arch }}/bin mingwdeployqt.exe desktop-qt/CodeInspector.exe
           
   macOS:
     runs-on: macos-latest
