--- a/plugins/tools/readelf/CMakeLists.txt
+++ b/plugins/tools/readelf/CMakeLists.txt
@@ -4,8 +4,7 @@ project(readelf VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
 
 # Instruct CMake to run moc automatically when needed.
@@ -33,9 +32,9 @@ file(GLOB
         ./*.cpp
         )
 
-qt_add_plugin(readelf STATIC CLASS_NAME ReadELFPlugin)
+qt_add_plugin(${PROJECT_NAME} STATIC CLASS_NAME ReadELFPlugin)
 
-target_sources(readelf PRIVATE ${src} ${headers})
+target_sources(${PROJECT_NAME} PRIVATE ${src} ${headers})
 
-target_include_directories(readelf PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(readelf PRIVATE core plugins scintilla Qt::Widgets)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${PROJECT_NAME} PRIVATE core plugins scintilla Qt::Widgets)
