--- a/plugins/include/CMakeLists.txt
+++ b/plugins/include/CMakeLists.txt
@@ -4,6 +4,6 @@ project(plugins VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(plugins INTERFACE)
+add_library(${PROJECT_NAME} INTERFACE)
 
-target_include_directories(plugins INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
