--- a/plugins/runners/rextester/CMakeLists.txt
+++ b/plugins/runners/rextester/CMakeLists.txt
@@ -4,7 +4,7 @@ project(rextester VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
 
 # Instruct CMake to run moc automatically when needed.
@@ -32,10 +32,10 @@ file(GLOB
         ./*.cpp
         )
 
-qt_add_plugin(rextester STATIC CLASS_NAME RextesterPlugin)
+qt_add_plugin(${PROJECT_NAME} STATIC CLASS_NAME RextesterPlugin)
 
-target_sources(rextester PRIVATE ${src} ${headers})
+target_sources(${PROJECT_NAME} PRIVATE ${src} ${headers})
 
-target_link_libraries(rextester PRIVATE core plugins scintilla Qt::Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE core plugins scintilla Qt::Widgets)
 
-target_include_directories(rextester PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
