--- a/plugins/runners/rextester/CMakeLists.txt
+++ b/plugins/runners/rextester/CMakeLists.txt
@@ -32,7 +32,14 @@ file(GLOB
         ./*.cpp
         )
 
-qt_add_plugin(${PROJECT_NAME} STATIC CLASS_NAME RextesterPlugin)
+
+
+IF(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+        qt_add_plugin(${PROJECT_NAME} STATIC CLASS_NAME RextesterPlugin)
+ELSE()
+        add_library(${PROJECT_NAME} STATIC)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC  QT_STATICPLUGIN)
+ENDIF()
 
 target_sources(${PROJECT_NAME} PRIVATE ${src} ${headers})
 
