try to fix build with MinGW

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -369,14 +369,14 @@ jobs:
           git clone https://github.com/missdeer/mingwdeployqt.git
           
       - name: Build mingwdeployqt
-        shell: msys2 {0}
         run: |
+          set MSYSTEM=${{ matrix.mingw_arch }}
           cd mingwdeployqt
           mkdir build
           cd build
-          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
-          ninja
-          cp mingwdeployqt.exe /${{ matrix.mingw_arch }}/bin/
+          msys2 -c "env PATH=$PATH:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja .."
+          msys2 -c "ninja"
+          msys2 -c "cp mingwdeployqt.exe /${{ matrix.mingw_arch }}/bin/"
           cd ../..
 
       - name: copy CMakeLists.txt
@@ -408,13 +408,13 @@ jobs:
           cd ..\..\..\..
 
       - name: build
-        shell: msys2 {0}
         run: |
+          set MSYSTEM=${{ matrix.mingw_arch }}
           mkdir build
           cd build
-          env PATH=/${{ matrix.mingw_arch }}/bin:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DQT_DIR=${{ matrix.qt_dir }} -DCMAKE_PREFIX_PATH=${{ matrix.cmake_prefix_path }} -G Ninja ..
-          env PATH=/${{ matrix.mingw_arch }}/bin ninja
-          env PATH=/${{ matrix.mingw_arch }}/bin mingwdeployqt.exe desktop-qt/CodeInspector.exe
+          msys2 -c "env PATH=$PATH:/${{ matrix.mingw_arch }}/${{ matrix.qt_build }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DQT_DIR=${{ matrix.qt_dir }} -DCMAKE_PREFIX_PATH=${{ matrix.cmake_prefix_path }} -G Ninja .."
+          msys2 -c "ninja"
+          msys2 -c "mingwdeployqt.exe desktop-qt/CodeInspector.exe"
           
   macOS:
     runs-on: macos-latest
