--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
+        qt_ver: [6.4.2, 5.15.2]
         qt_target: [desktop]
         qt_arch: [win64_msvc2019_64]
         include:
@@ -100,6 +101,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
+        qt_ver: [6.4.2, 5.15.2]
         qt_target: [desktop]
         qt_arch: [win64_msvc2019_64]
         include:
@@ -189,6 +191,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
+        qt_ver: [6.4.2, 5.15.2]
         qt_target: [desktop]
         qt_arch : [win64_msvc2019_64]
         include:
